--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -1,5 +1,5 @@
 /*!
- * Bootstrap v2.3.0
+ * Bootstrap v2.3.2
  *
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
@@ -11,15 +11,6 @@
 .clearfix {
   *zoom: 1;
 }
-
-.new {
-  margin: 2em auto; 
-  width: 60em; 
-  padding: 0.8em; 
-}
-
-
-.foo
 
 .clearfix:before,
 .clearfix:after {
@@ -240,7 +231,7 @@ body {
 }
 
 a {
-  color: #8D1855;
+  color: #0088cc;
   text-decoration: none;
 }
 
@@ -774,7 +765,6 @@ h3 {
 
 h1 {
   font-size: 38.5px;
-  border-bottom: 2px solid #eee;
 }
 
 h2 {
@@ -3019,6 +3009,15 @@ table th[class*="span"],
   display: block;
 }
 
+.dropdown-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 990;
+}
+
 .pull-right > .dropdown-menu {
   right: 0;
   left: auto;
@@ -4419,7 +4418,7 @@ input[type="submit"].btn.btn-mini {
   margin-left: -20px;
   font-size: 20px;
   font-weight: 200;
-  color: #000;
+  color: #777777;
   text-shadow: 0 1px 0 #ffffff;
 }
 
@@ -4431,11 +4430,11 @@ input[type="submit"].btn.btn-mini {
 .navbar-text {
   margin-bottom: 0;
   line-height: 40px;
-  color: #000;
+  color: #777777;
 }
 
 .navbar-link {
-  color: #000;
+  color: #777777;
 }
 
 .navbar-link:hover,
